[package]
name = "rlbot_rust_compat"
version = "0.1.0"
edition = "2021"
exclude = ["examples/lib.rs", "collision_meshes"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rlbot_rust_compat"
crate-type = ["cdylib", "rlib"]

[dependencies]
glam = "0.24.1"
memmap2 = "0.9.0"
ndarray = "0.15.6"
numpy = "0.20.0"
pyo3 = "0.20.0"
rand = { version = "0.8.5", features = ["small_rng"] }
# rlgym_sim_rs = "0.3.0-alpha"
rlgym_sim_rs = { version = "0.8.0-alpha", path = "../rlgym-sim-rs" }
rocketsim_rs = {version = "0.29.3", features = ["bin"], path = "../rocketsim-rs"}
#rocketsim_rs = {version = "0.24.2", features = ["bin"]}
